Removed some useless lines. Fixed splash appearing on mobile (font size changes before showing up on screen).

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
   font-style: normal;
 }
 
+/***
+ * 'Main' page
+ ***/
+
 html {
   font-size: 18px;
 }
@@ -152,8 +156,9 @@ canvas {
   font-size: clamp(1rem, 3vw, 4vw);
   margin-top: 0.5rem;
   writing-mode: horizontal-tb;
-  transition: all 0.4s ease;
+  transition: opacity 0.5s ease;
   color: var(--font-color);
+  opacity: 0;
 }
 
 #footerNote {
